fix overlap

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ html, body{
     left:30%;
     padding:0;
     top:600px;
+    z-index:3;
     /*padding-left:800px;*/
 }
 
